# OpenBBQ

./: .gitignore  AGENTS.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  alembic.ini  pyproject.toml
.agents/skills/pencil-design/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/electron/: apiTypes.ts  config.ts  http.ts  ipc.ts  main.ts  mediaUrls.ts  preload.cts  preload.ts  reviewMapping.ts  sidecar.ts  taskMapping.ts  wavWaveform.ts  workflowMapping.ts
desktop/electron/__tests__/: config.test.ts  http.test.ts  ipc.test.ts  mediaUrls.test.ts  (+5 more)
desktop/src/: App.tsx  global.d.ts  styles.css
desktop/tests/: desktop-ui.spec.ts
docs/: Architecture.md  Roadmap.md  Target-Workflows.md
docs/desktop-ui/: Frontend-PRD.md
docs/phase1/: Backend-CLI-Goals.md  CLI-Spec.md  Domain-Model.md  Phase-1-Scope.md  Plugin-System.md  Project-Config.md  README.md  Workflow-Engine.md
docs/phase2/: Phase-2-Exit.md  README.md
src/openbbq/: cli.py  config.py  domain.py  engine.py  errors.py  storage.py
tests/: __init__.py  builtin_plugin_fakes.py  helpers.py  test_api_context_adapters.py  test_api_events.py  test_api_health.py  test_api_projects_plugins_runtime.py  test_api_schemas.py  test_api_server.py  test_api_workflow_definitions.py  test_api_workflows_artifacts_runs.py  test_application_artifacts.py  test_application_project_context.py  test_application_projects_plugins.py  test_application_quickstart.py  test_application_runs.py  test_application_runtime_diagnostics.py  test_application_workflows.py  test_artifact_diff.py  test_artifact_import.py  test_builtin_faster_whisper.py  test_builtin_ffmpeg.py  test_builtin_glossary.py  test_builtin_llm_helpers.py  test_builtin_plugin_discovery.py  test_builtin_plugins.py  test_builtin_remote_video.py  test_builtin_segments.py  test_builtin_subtitle.py  test_builtin_transcript.py  test_builtin_translation.py  test_cli_control_flow.py  test_cli_integration.py  test_cli_module_split.py  test_cli_quickstart.py  test_cli_smoke.py  test_config.py  test_config_precedence.py  test_engine_abort.py  test_engine_error_policy.py  (+40 more)
(+265 files in other folders)
