[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openbbq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.0"]

[project.optional-dependencies]
media = ["faster-whisper>=1.2"]
llm = ["openai>=1.0"]
download = ["yt-dlp>=2024.12.0"]

[project.scripts]
openbbq = "openbbq.cli.app:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openbbq.builtin_plugins" = ["*/openbbq.plugin.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
