[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openbbq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
media = ["faster-whisper>=1.2"]
llm = ["openai>=1.0"]
download = ["yt-dlp>=2024.12.0"]
secrets = ["keyring>=25"]

[project.scripts]
openbbq = "openbbq.cli.app:main"
openbbq-api = "openbbq.api.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27", "fastapi>=0.115", "uvicorn>=0.30"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openbbq.builtin_plugins" = ["*/openbbq.plugin.toml"]
"openbbq.workflow_templates.local_subtitle" = ["openbbq.yaml"]
"openbbq.workflow_templates.youtube_subtitle" = ["openbbq.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
